--- a/src/Game.css
+++ b/src/Game.css
@@ -4,3 +4,8 @@
     background-color: #000;
     background-image: linear-gradient(#333 1px, transparent 1px),linear-gradient(90deg, #333 1px, transparent 1px);
 }
+
+.cell{
+    background: #ccc;
+    position: absolute;
+}
