--- a/src/Game.css
+++ b/src/Game.css
@@ -5,7 +5,7 @@
     background-image: linear-gradient(#333 1px, transparent 1px),linear-gradient(90deg, #333 1px, transparent 1px);
 }
 
-.cell{
+.Cell{
     background: #ccc;
     position: absolute;
 }
